zokrates_cli/examples/compile_errors/too_many_generics.zok
def foo() -> field {
    return 1;
}

def main() -> field {
    return foo::<42>();
}
